# grin-chat-bot

./: Debug.py  Dockerfile  README.md  __main__.py  app.py  constants.py  containers.py  debug.py  pyproject.toml  requirements.txt  start_me_first_once.py  starter_me_first_once.py  vertex_ai_app.py
.devcontainer/: devcontainer.json
application/: app.py  response_handler.py  views.py
application/controllers/: chat.py  profiles.py
application/static/: style.css
application/templates/: edit_profile.html  index.html  profiles.html
chroma/: chroma.sqlite3
chroma/00359f20-5d6a-4417-9681-3617ddc577c8/: index_metadata.pickle
controllers/: chat_controller.py  reset_controller.py
data/: A brief videogame history part 2.txt  A brief videogame history.txt
deprecated/vertex_ai/: vertex_ai_api_helper.py  vertex_ai_app.py
dto/: ModelSettings.py
helpers/: config_helper.py  db_helper.py  doc_helper.py  document_helper.py  llm_helper.py  vertex_ai_api_helper.py
language_models/gcloud/: vertex_ai_api_helper.py  vertex_prompt_helper.py
language_models/open_ai/: OpenAICommunicator.py  OpenAIHandler.py
language_models/sentence_transformer/: Transformer.py
language_models/vertex_ai/: vertex_ai.py
models/: PersonProfile.py
models/db_models/: DbProfile.py
models/entities/: PersonProfile.py
models/llm_models/: PerfonProfileExtract.py
prompt_templates/: prompts.py
prompts/: prompt_templates.py  schemas.py
repositories/: ProfileRepository.py  db.py
templates/: index.html  prompts.py
web_app/: app.py  backend.py  response_handler.py
(+1 files in other folders)
